# client-json-placeholder

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
jsonplaceholder/: base.py  client.py  request.py  resources.py  schemas.py
tests/: conftest.py  test_albums.py  test_base.py  test_comments.py  test_photos.py  test_posts.py  test_todo.py  test_user.py
